# exchange-rate-service

./: .env.dev  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  ruff.toml  task.md
src/exchange_rate/: config.py  main.py
src/exchange_rate/api/dependencies/: app_dependencies.py  core_dependencies.py  redis_setup.py
src/exchange_rate/api/endpoints/: conversion_route.py
src/exchange_rate/api/handlers/: conversion_handler.py
src/exchange_rate/api/middleware/: middleware.py
src/exchange_rate/api/websocket/: websocket_client.py
src/exchange_rate/freecurrency/: freecurrency_client.py  freecurrency_setup.py
src/exchange_rate/logging/: logger.py  singleton.py
src/exchange_rate/models/: errors.py  exchange_rates.py  models.py
src/exchange_rate/redis/: redis_client.py  redis_setup.py
src/exchange_rate/redis/base_statements/: set_cache_statement.py
src/exchange_rate/services/: convertion_service.py
src/exchange_rate/utils/: cache_utils.py  parser.py
