[project]
name = "exchange-rate-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "redis>=5.2.0",
    "rich>=13.9.3",
    "websockets>=13.1",
    "freecurrencyapi>=0.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

check_untyped_defs = true
follow_imports= "normal"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable= false
strict_optional = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true